FINALIZACION DE LA SECCION TURNOS

--- a/pages/home.html
+++ b/pages/home.html
@@ -9,7 +9,7 @@
 <body id="body">
     <nav id="nav">
         <div class="nav-container">
-            <a href="#" class="nav-logo">
+            <a href="pages/home.html" class="nav-logo">
                 <img  src="/public/imagenes/Diagrama DE CLASES.png" alt="CANHEROS LOGO">
                 <span>CANCHEROS</span>
             </a>
@@ -17,7 +17,7 @@
             <div class="nav-menu" id="nav-menu">
                 <div class="nav-list">
                     
-                        <a href="#" class="nav-item">PRINCIPAL</a>
+                        <a href="pages/home.html" class="nav-item">PRINCIPAL</a>
                         <a href="#" class="nav-item" >NOSOTROS</a>
                         <a href="#" class="nav-item">PRECIOS</a>
                         <a href="#" class="nav-item">CONTACTO</a>
@@ -60,5 +60,11 @@
     <div id="container-2">
     <a href="turnos.html">RESERVA TU TURNO ACA</a>
 </section>
+<section>
+    <footer>
+        <p><a href="">CANCHEROS</a> | <a href="#">Política de Privacidad</a> | <a href="#">Términos de Servicio</a></p>
+    </footer>
+</section>
+<script src="turnos.js"></script>
 </body>
 </html>
