--- a/home.html
+++ b/home.html
@@ -7,6 +7,7 @@
     <title>canchas de futbol 5</title>
 </head>
 <body id="body">
+    
     <nav id="nav">
         <div class="nav-container">
             <a href="pages/home.html" class="nav-logo">
@@ -26,17 +27,28 @@
             </div>
         </div>
     </nav> 
-<section id="img">
-        <div id="text-banner">
-            <h1 id="title">CANCHEROS 
-            <br>
-            COMPLEJO DE CANCHAS DE FUTBOL 5
-            </h1>
+
+
+    <div class="carousel-container">
+        <div class="carousel">
+            <div class="slide">
+                <img src="/public/imagenes/1.png" alt="1">
+                <h1 class="text">CANCHEROS</h1>
+            </div>
+            <div class="slide">
+                <img src="/public/imagenes/2.png" alt="2">
+                <h1 class="text">COMPLEJO DE CANCHAS DE FUTBOL 5</h1>
+            </div>
+            <div class="slide">
+                <img src="/public/imagenes/3.png" alt="3">
+                <h1 class="text"> AV. IGNACIO DE LA ROZA 333</h1>
+            </div>
         </div>
-        <div id="text-banner">
-            <h1 id="dir"> AV. IGNACIO DE LA ROZA 333</h1>
-        </div>
-</section>
+        <button id="prev">❮</button>
+        <button id="next">❯</button>
+    </div>
+
+
 <section id="section-3">
     <div id="container">
         <h1> Bienvenidos a CANCHEROS – Tu Lugar para el Mejor Fútbol 5</h1>
@@ -65,6 +77,6 @@
         <p><a href="">CANCHEROS</a> | <a href="#">Política de Privacidad</a> | <a href="#">Términos de Servicio</a></p>
     </footer>
 </section>
-<script src="turnos.js"></script>
+<script src="home.js"></script>
 </body>
 </html>
