--- a/turnos.html
+++ b/turnos.html
@@ -30,6 +30,13 @@
         </div>
     </nav>
 
+<section id="img">
+        <div id="text-banner">
+            <h1 id="title">CANCHEROS TE INVITA A DISFRUTAR UNA TARDE EN SU COMPLEJO
+            </h1>
+        </div>
+</section>
+
 <section id="section">
     <div >
         <form id="whatsapp">
@@ -41,6 +48,11 @@
             <div id="group">
                 <label for="DNI">DNI</label>
                     <input type="text" id="DNI" name="DNI" required>
+            </div>
+
+            <div id="group">
+                <label for="hora">HORA</label>
+                <input type="time" id="hora" name="hora" required>
             </div>
         
             <button type="submit">ENVIAR</button>
