--- a/turnos.html
+++ b/turnos.html
@@ -12,15 +12,15 @@
 
     <nav id="nav">
         <div class="nav-container">
-            <a href="pages/home.html" class="nav-logo">
-                <img  src="/public/imagenes/Diagrama DE CLASES.png" alt="CANHEROS LOGO">
+            <a href="index.html" class="nav-logo">
+                <img  src="Diagrama DE CLASES.png" alt="CANHEROS LOGO">
                 <span>CANCHEROS</span>
             </a>
             
             <div class="nav-menu" id="nav-menu">
                 <div class="nav-list">
                     
-                        <a href="pages/home.html" class="nav-item">PRINCIPAL</a>
+                        <a href="index.html" class="nav-item">PRINCIPAL</a>
                         <a href="#" class="nav-item" >NOSOTROS</a>
                         <a href="#" class="nav-item">PRECIOS</a>
                         <a href="#" class="nav-item">CONTACTO</a>
